Update layout and fix right gap

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,14 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #020617;
+}
+
+#root {
+  width: 100%;
+  height: 100vh;
 }
 
 h1 {
